--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
+    "react-markdown": "^9.0.1",
     "react-player": "^2.14.1",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "react-simplemde-editor": "^5.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
